# substratekitties-learning

./: Cargo.toml  README.md
runtime/src/: lib.rs  substratekitties.rs
runtime/wasm/: Cargo.toml
substratekitties/: README.md
substratekitties-ui/: package-lock.json
substratekitties-ui/src/: app.jsx
substratekitties/runtime/: Cargo.toml
substratekitties/runtime/src/: lib.rs
substratekitties/runtime/wasm/: build.sh
substratekitties/runtime/wasm/src/: lib.rs
substratekitties/src/: main.rs
